--- a/Reto 0/res/layout/main.xml
+++ b/Reto 0/res/layout/main.xml
@@ -7,7 +7,12 @@
 <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="Hello World, Reto 0!"
+    android:text="@string/mensaje_hello_world"
+    />
+<TextView  
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="@string/mensaje_author"
     />
 </LinearLayout>
 
