Reto 4: Implementada versión inicial del diálogo de acerca de

--- a/Reto 4/AndroidTicTacToe-Tutorial2/app/src/main/res/menu/options_menu.xml
+++ b/Reto 4/AndroidTicTacToe-Tutorial2/app/src/main/res/menu/options_menu.xml
@@ -6,7 +6,9 @@
     <item android:id="@+id/ai_difficulty"
         android:title="Dificultad" />
     <!--android:icon="@drawable/difficulty_level"  /-->
+    <item android:id="@+id/about"
+        android:title="Acerca de..." />
+    <!--android:icon="@drawable/quit_game" /-->
     <item android:id="@+id/quit"
         android:title="Salir" />
-    <!--android:icon="@drawable/quit_game" /-->
 </menu>
