--- a/Reto 4/AndroidTicTacToe-Tutorial2/app/src/main/res/layout/about_dialog.xml
+++ b/Reto 4/AndroidTicTacToe-Tutorial2/app/src/main/res/layout/about_dialog.xml
@@ -8,12 +8,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/app_icon"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:background="@mipmap/ic_launcher"
+        android:layout_margin="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tic Tac Toe por Christian Ortega"
+        android:text="@string/app_name"
+        android:id="@+id/app_name"
+        android:layout_gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textSize="20sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_author_ext"
         android:id="@+id/app_author"
         android:layout_gravity="center_horizontal"
         android:textStyle="bold" />
@@ -21,14 +32,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Juegue triqui en sus ratos de ocio. No lo haga en la vía pública; podría sufrir un accidente"
+        android:text="@string/app_description"
         android:id="@+id/app_description"
-        android:layout_gravity="center_horizontal" />
-
-    <!--<Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cerrar"
-        android:id="@+id/button"
-        android:layout_gravity="center_horizontal" />-->
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp" />
 </LinearLayout>
