--- a/Reto 4/AndroidTicTacToe-Tutorial2/app/src/main/res/layout/activity_android_tic_tac_toe.xml
+++ b/Reto 4/AndroidTicTacToe-Tutorial2/app/src/main/res/layout/activity_android_tic_tac_toe.xml
@@ -16,8 +16,8 @@
             android:id="@+id/state_human"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5px"
-            android:layout_marginRight="5px" >
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp" >
             <TextView android:id="@+id/state_human_wins"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -40,8 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/state_human"
             android:layout_toRightOf="@id/state_human"
-            android:layout_marginLeft="5px"
-            android:layout_marginRight="5px" >
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp" >
             <TextView android:id="@+id/state_ties"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -64,8 +64,8 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/state_tie"
             android:layout_toRightOf="@id/state_tie"
-            android:layout_marginLeft="5px"
-            android:layout_marginRight="5px">
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp">
             <TextView android:id="@+id/state_bugdroid_wins"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -95,57 +95,57 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:text="@string/play_grid_button_1"
-                android:textSize="50dp" />
+                android:textSize="50sp" />
 
             <Button android:id="@+id/two"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:text="@string/play_grid_button_2"
-                android:textSize="50dp" />
+                android:textSize="50sp" />
 
             <Button android:id="@+id/three"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:text="@string/play_grid_button_3"
-                android:textSize="50dp" />
+                android:textSize="50sp" />
         </TableRow>
         <TableRow android:gravity="center_horizontal">
             <Button android:id="@+id/four"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:text="@string/play_grid_button_4"
-                android:textSize="50dp" />
+                android:textSize="50sp" />
 
             <Button android:id="@+id/five"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:text="@string/play_grid_button_5"
-                android:textSize="50dp" />
+                android:textSize="50sp" />
 
             <Button android:id="@+id/six"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:text="@string/play_grid_button_6"
-                android:textSize="50dp" />
+                android:textSize="50sp" />
         </TableRow>
         <TableRow android:gravity="center_horizontal">
             <Button android:id="@+id/seven"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:text="@string/play_grid_button_7"
-                android:textSize="50dp" />
+                android:textSize="50sp" />
 
             <Button android:id="@+id/eight"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:text="@string/play_grid_button_8"
-                android:textSize="50dp" />
+                android:textSize="50sp" />
 
             <Button android:id="@+id/nine"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:text="@string/play_grid_button_9"
-                android:textSize="50dp" />
+                android:textSize="50sp" />
         </TableRow>
     </TableLayout>
 
