--- a/Reto 5/AndroidTicTacToe-Tutorial2/app/src/main/res/layout/activity_android_tic_tac_toe.xml
+++ b/Reto 5/AndroidTicTacToe-Tutorial2/app/src/main/res/layout/activity_android_tic_tac_toe.xml
@@ -84,70 +84,12 @@
     </RelativeLayout>
 
 
-    <TableLayout
+    <ceortegal.unal.edu.co.androidtictactoe_tutorial2.BoardView
         android:id="@+id/play_grid"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp" >
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="5dp"/>
 
-        <TableRow android:gravity="center_horizontal">
-            <Button android:id="@+id/one"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="@string/play_grid_button_1"
-                android:textSize="50sp" />
-
-            <Button android:id="@+id/two"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="@string/play_grid_button_2"
-                android:textSize="50sp" />
-
-            <Button android:id="@+id/three"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="@string/play_grid_button_3"
-                android:textSize="50sp" />
-        </TableRow>
-        <TableRow android:gravity="center_horizontal">
-            <Button android:id="@+id/four"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="@string/play_grid_button_4"
-                android:textSize="50sp" />
-
-            <Button android:id="@+id/five"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="@string/play_grid_button_5"
-                android:textSize="50sp" />
-
-            <Button android:id="@+id/six"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="@string/play_grid_button_6"
-                android:textSize="50sp" />
-        </TableRow>
-        <TableRow android:gravity="center_horizontal">
-            <Button android:id="@+id/seven"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="@string/play_grid_button_7"
-                android:textSize="50sp" />
-
-            <Button android:id="@+id/eight"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="@string/play_grid_button_8"
-                android:textSize="50sp" />
-
-            <Button android:id="@+id/nine"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:text="@string/play_grid_button_9"
-                android:textSize="50sp" />
-        </TableRow>
-    </TableLayout>
 
     <TextView android:id="@+id/information"
         android:layout_width="fill_parent"
