-Reto 5: Implementada la carga de imagenes personalizadas y los sonidos de juego

--- a/Reto 5/AndroidTicTacToe-Tutorial2/app/src/main/res/layout/activity_android_tic_tac_toe.xml
+++ b/Reto 5/AndroidTicTacToe-Tutorial2/app/src/main/res/layout/activity_android_tic_tac_toe.xml
@@ -86,9 +86,10 @@
 
     <ceortegal.unal.edu.co.androidtictactoe_tutorial2.BoardView
         android:id="@+id/play_grid"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_width="230dp"
+        android:layout_height="230dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_horizontal" />
 
 
     <TextView android:id="@+id/information"
