--- a/Reto 5/AndroidTicTacToe-Tutorial2/app/src/main/res/menu/options_menu.xml
+++ b/Reto 5/AndroidTicTacToe-Tutorial2/app/src/main/res/menu/options_menu.xml
@@ -5,6 +5,8 @@
         <!--android:icon="@drawable/new_game" /-->
     <item android:id="@+id/ai_difficulty"
         android:title="Dificultad" />
+    <item android:id="@+id/sound"
+        android:title="Sonido" />
     <!--android:icon="@drawable/difficulty_level"  /-->
     <item android:id="@+id/about"
         android:title="Acerca de..." />
