--- a/Reto 6/AndroidTicTacToe-Tutorial2/app/src/main/res/menu/options_menu.xml
+++ b/Reto 6/AndroidTicTacToe-Tutorial2/app/src/main/res/menu/options_menu.xml
@@ -2,15 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/new_game"
         android:title="Nuevo juego" />
-        <!--android:icon="@drawable/new_game" /-->
     <item android:id="@+id/ai_difficulty"
         android:title="Dificultad" />
     <item android:id="@+id/sound"
         android:title="Sonido" />
-    <!--android:icon="@drawable/difficulty_level"  /-->
+    <item android:id="@+id/reset_game"
+        android:title="Reiniciar valores" />
     <item android:id="@+id/about"
         android:title="Acerca de..." />
-    <!--android:icon="@drawable/quit_game" /-->
     <item android:id="@+id/quit"
         android:title="Salir" />
 </menu>
