--- a/Reto 8/app/src/main/res/layout/activity_view_all_contacts.xml
+++ b/Reto 8/app/src/main/res/layout/activity_view_all_contacts.xml
@@ -9,8 +9,55 @@
     tools:context=".ViewAllContacts"
     android:gravity="center_horizontal">
 
+    <TextView
+        android:id="@+id/text_view_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/type_filter"
+        android:layout_gravity="left"
+        android:textSize="@dimen/add_edit_textsize"
+        android:paddingRight="25dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/check_type_filter_consulting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/type_consulting_filter"
+            android:textSize="@dimen/add_edit_textsize"
+            android:checked="true" />
+
+        <CheckBox
+            android:id="@+id/check_type_filter_developer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/type_developer_filter"
+            android:textSize="@dimen/add_edit_textsize"
+            android:checked="true" />
+
+        <CheckBox
+            android:id="@+id/check_type_filter_softwarefactory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/type_softwarefactory_filter"
+            android:textSize="@dimen/add_edit_textsize"
+            android:checked="true" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/button_filter_contact"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginTop="@dimen/button_padding"
+        android:text="@string/filter_contact"
+        android:layout_gravity="center"/>
+
     <ListView
-            android:id="@android:id/list"
+            android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/textView1"
