--- a/Reto10/app/src/main/res/layout/fragment_unidadestadisticaagregada.xml
+++ b/Reto10/app/src/main/res/layout/fragment_unidadestadisticaagregada.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/text_margin"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:baselineAligned="false">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_marginBottom="@dimen/text_margin"
         android:layout_marginRight="@dimen/text_margin"
         android:orientation="vertical">
@@ -75,9 +77,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:minWidth="100dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center">
         <TextView
             android:id="@+id/total"
             android:layout_width="wrap_content"
